--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@angular/language-service": "^11.0.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
+    "@ngneat/spectator": "^6.1.3",
     "@nrwl/cli": "11.1.5",
     "@nrwl/cypress": "11.1.5",
     "@nrwl/eslint-plugin-nx": "11.1.5",
