--- a/package.json
+++ b/package.json
@@ -40,7 +40,10 @@
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@ngneat/until-destroy": "^8.0.3",
+    "@ngrx/store": "^10.1.2",
     "@nrwl/angular": "11.1.5",
+    "ng-mocks": "^11.4.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
