--- a/package.json
+++ b/package.json
@@ -41,7 +41,11 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "@ngneat/until-destroy": "^8.0.3",
+    "@ngrx/effects": "^10.1.2",
+    "@ngrx/entity": "^10.1.2",
+    "@ngrx/router-store": "^10.1.2",
     "@ngrx/store": "^10.1.2",
+    "@ngrx/store-devtools": "^10.1.2",
     "@nrwl/angular": "11.1.5",
     "ng-mocks": "^11.4.0",
     "reflect-metadata": "^0.1.13",
@@ -60,6 +64,7 @@
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
     "@ngneat/spectator": "^6.1.3",
+    "@ngrx/schematics": "^10.1.2",
     "@nrwl/cli": "11.1.5",
     "@nrwl/cypress": "11.1.5",
     "@nrwl/eslint-plugin-nx": "11.1.5",
