--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@ngneat/reactive-forms": "^1.5.1",
+    "@ngneat/transloco": "^2.20.0",
     "@ngneat/until-destroy": "^8.0.3",
     "@ngrx/effects": "^10.1.2",
     "@ngrx/entity": "^10.1.2",
