--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/platform-socket.io": "^7.6.5",
+    "@nestjs/websockets": "^7.6.5",
     "@ngneat/reactive-forms": "^1.5.1",
     "@ngneat/transloco": "^2.20.0",
     "@ngneat/until-destroy": "^8.0.3",
@@ -50,6 +52,7 @@
     "@ngrx/store-devtools": "^10.1.2",
     "@nrwl/angular": "11.1.5",
     "ng-mocks": "^11.4.0",
+    "ngx-socket-io": "^3.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
@@ -77,6 +80,7 @@
     "@nrwl/workspace": "11.1.5",
     "@types/jest": "26.0.8",
     "@types/node": "12.12.38",
+    "@types/socket.io": "^2.1.12",
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "@typescript-eslint/parser": "4.3.0",
     "codelyzer": "^6.0.0",
