--- a/angular.json
+++ b/angular.json
@@ -17,7 +17,7 @@
             "tsConfig": "apps/client/tsconfig.app.json",
             "aot": true,
             "assets": ["apps/client/src/favicon.ico", "apps/client/src/assets"],
-            "styles": ["apps/client/src/styles.scss"],
+            "styles": ["./node_modules/@angular/material/prebuilt-themes/indigo-pink.css", "apps/client/src/styles.scss"],
             "scripts": []
           },
           "configurations": {
